[package]
name = "ccol"
version = "0.1.0"
edition = "2021"
authors = ["Ross Wilson"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
copypasta = "0.10.1"
derive_setters = "0.1.6"
directories = "5.0.1"
dotenv = "0.15.0"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.12.0"
tui-tree-widget = "0.22.0"
anyhow = "1.0.95"

[[bin]]
name = "ccol"
path = "src/main.rs"
